<resources>
    <!--STRINGS DE PANTALLA PRINCIPAL-->
    <string name="app_name">Connect4</string>
    <string name="help">Ajuda</string>
    <string name="start">Començar Partida</string>
    <string name="exit">Sortir</string>
    <string name="config">Configuracio</string>
    <string name="dataBase">Consultar Partides</string>

    <!--STRINGS DE AJUDA-->
    <string name="explicacio"> El joc consisteix en anar introduint fitxes en un tauler vertical amb l\'objectiu d\'alinear 4 consecutives del color assignat al jugador (roig) abans que el teu oponent.</string>
    <string name="explicacio1"> A cada torn, el jugador introdueix una fitxa a la columna triada(sempre i quan no estigui completa), i aquesta cau a la posició més baixa possible.</string>
    <string name="explicacio2"> Guanya la partida el jugador que primer aconsegueix alinear 4 fitxes consecutives del seu color en horitzonal, vertical o diagonal.</string>
    <string name="explicacio3"> Si totes les columnes estan plenes i ningú ha aconseguit alinear-ne 4 fitxes, hi ha empat.</string>
    <string name="tornar">Tornar al Menu</string>

    <!--STRINGS DE CONFIGURACIO INICIAL-->
    <string name="alias">Alias Identificatiu</string>
    <string name="aliasintro">Introduir Alias</string>
    <string name="graella">Mida Graella</string>
    <string name="num1">7</string>
    <string name="num2">6</string>
    <string name="num3">5</string>
    <string name="temps">Control de Temps</string>
    <string name="aliaskey">aliaskey</string>
    <string name="graellakey">graellakey</string>
    <string name="tempskey">tempskey</string>

    <!--STRINGS DE RESULTATS-->
    <string name="schedule">Dia i hora</string>
    <string name="logval">Valors del log</string>
    <string name="email">E-mail destinatari</string>
    <string name="sendemail">Enviar e-mail</string>
    <string name="newGame">Nova Partida</string>
    <string name="sendingEmail">Preparant Correu</string>
    <string name="emailexemple">algu@email.com</string>

    <!--PREFERENCE STRINGS-->
    <string name="Alias">Alias</string>
    <string name="Alias_info">Alias del jugador</string>
    <string name="Time">Control del Temps</string>
    <string name="Time_info">Marcar per a limitar el temps de la partida</string>
    <string name="Grill">Mida Graella</string>
    <string name="Grill_info">Mida de la graella del joc</string>

    <!--STRINGS DEL REGISTRE DE PARTIDES-->
    <string name="goback">Tornar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>


