<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="P1"
        android:key="@string/Alias"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/Alias"
        android:summary="@string/Alias_info"
        android:icon="@drawable/ic_blue_user"
        />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/Time"
        android:title="@string/Time"
        android:summary="@string/Time_info"
        android:icon="@drawable/ic_current_event_clock_big"
        />
    <ListPreference
        android:key="@string/Grill"
        android:title="@string/Grill"
        android:defaultValue="7"
        android:entries="@array/size_array"
        android:entryValues="@array/size_values_array"
        android:summary="@string/Grill_info"
        android:icon="@drawable/ic_matrix"
        />

</PreferenceScreen>