<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/explicacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/explicacio" />
    <TextView
        android:id="@+id/explicacio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explicacio1"
        android:gravity="center" />
    <TextView
        android:id="@+id/explicacio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explicacio2"
        android:gravity="center" />
    <TextView
        android:id="@+id/explicacio3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explicacio3"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        />
    <Button
        android:id="@+id/Tornar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tornar" />

</LinearLayout>