<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    tools:context=".ResultsActivity">

    <ImageView
        android:id="@+id/results_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/resultats" />

    <TextView
        android:id="@+id/horaidia"
        style="@style/estilLletra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/schedule"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorRetro"
        android:textColor="@color/colorRetro"
        android:backgroundTint="@color/colorRetro"
        />

    <TextView
        android:id="@+id/logValue"
        style="@style/estilLletra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/logval"
        />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorRetro"
        android:textColor="@color/colorRetro"
        android:backgroundTint="@color/colorRetro"
        />

    <TextView
        android:id="@+id/email"
        style="@style/estilLletra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/email"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorRetro"
        android:textColor="@color/colorRetro"
        android:backgroundTint="@color/colorRetro"
        android:hint="@string/emailexemple"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/email_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/sendemail"
            android:drawableLeft="@drawable/ic_mailicon"/>

        <Button
            android:id="@+id/newGame_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/newGame"
            android:drawableLeft="@drawable/ic_go_back_arrow"/>

        <Button
            android:id="@+id/exit_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:drawableLeft="@drawable/ic_exitimage"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/eslogan_image4"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:src="@drawable/lema"
            android:layout_gravity="bottom"/>

    </LinearLayout>

</LinearLayout>